--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.2
   carousel_slider: ^2.2.1
   
+  provider: ^4.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
